--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -45,16 +45,16 @@
             <i class="ni ni-settings-gear-65"></i>
             <span>Settings</span>
           </a>
-          <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
+          <!-- <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
             <i class="ni ni-calendar-grid-58"></i>
             <span>Activity</span>
           </a>
           <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
             <i class="ni ni-support-16"></i>
             <span>Support</span>
-          </a>
+          </a> -->
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" (click)="signOut()">
+          <a class="dropdown-item" role="button" (click)="signOut()">
             <i class="ni ni-user-run"></i>
             <span>Logout</span>
           </a>
@@ -103,13 +103,16 @@
       <!-- Divider -->
       <hr class="my-3">
       <!-- Heading -->
-      <h6 class="navbar-heading text-muted">Documentation</h6>
+      <!-- <h6 class="navbar-heading text-muted">Documentation</h6> -->
       <!-- Navigation -->
       <ul class="navbar-nav mb-md-3">
         <li class="nav-item">
-          <a class="nav-link">
-            <i class="ni ni-spaceship"></i> Getting started
+          <a [routerLink]="['/user-profile']" class="nav-link">
+            <i class="ni ni-settings-gear-65"></i> Settings
           </a>
+          <!-- <a class="nav-link">
+            <i class="ni ni-spaceship"></i> Settings
+          </a> -->
         </li>
       </ul>
     </div>
