--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="row align-items-center justify-content-xl-between">
     <div class="col-xl-6">
       <div class="copyright text-center text-xl-left text-muted">
-        &copy; {{ test | date: "yyyy" }} <a class="font-weight-bold ml-1" target="_blank">Company Name</a>
+        &copy; {{ test | date: "yyyy" }} <a class="font-weight-bold ml-1" target="_blank">Finance</a>
       </div>
     </div>
     <div class="col-xl-6">
