--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
       </div>
 
       <!-- Card stats -->
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-xl-3 col-lg-6">
           <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
@@ -92,11 +92,11 @@
             </div>
           </div>
         </div>
-      </div> -->
-
-      <div class="mb-4">
-        <calendar-day></calendar-day>
       </div>
+
+      <!-- <div class="mb-4">
+        <calendar-day></calendar-day>
+      </div> -->
 
     </div>
   </div>
