--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -2,20 +2,17 @@
 	<div class="container">
 		<div class="header-body text-center mb-7">
 			<div class="row justify-content-center">
-				<div class="col-lg-5 col-md-6">
-					<h1 class="text-white">Welcome!</h1>
-					<p class="text-lead text-white">Use these awesome forms to login or create new account in your
-						project for free.</p>
+				<div class="col-lg-5 col-md-6" style="height: 70px;">
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="separator separator-bottom separator-skew zindex-100">
+	<!-- <div class="separator separator-bottom separator-skew zindex-100">
 		<svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
 			xmlns="http://www.w3.org/2000/svg">
 			<polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
 		</svg>
-	</div>
+	</div> -->
 </div>
 <!-- Page content -->
 <div class="container mt--9 pb-5">
@@ -24,8 +21,14 @@
 		<div class="col-lg-6 col-md-8">
 			<div class="card bg-secondary shadow border-0">
 				<div class="card-body px-lg-5 py-lg-5">
-					<div class="text-center text-muted mb-4">
-						<small>Forgot Password</small>
+					<div class="text-center mb-1">
+						<img src="./assets/img/brand/logoipsum-dark.svg" class="mb-1" />
+						<hr class="my-3">
+					</div>
+
+					<div class="text-muted mb-4">
+						<h2>Find your account</h2>
+						<small>Please enter your email address to search for your account.</small>
 					</div>
 
 					<form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()" *ngIf="!isConfirm">
@@ -53,7 +56,8 @@
 						</div>
 					</form>
 
-					<form [formGroup]="resetPasswordForm" autocomplete="off" (ngSubmit)="onCodeSubmit()" *ngIf="isConfirm">
+					<form [formGroup]="resetPasswordForm" autocomplete="off" (ngSubmit)="onCodeSubmit()"
+						*ngIf="isConfirm">
 						<div class="form-group mb-3">
 							<div class="input-group input-group-alternative">
 								<div class="input-group-prepend">
@@ -83,14 +87,19 @@
 							</div>
 						</div>
 
-						<div class="text-center mt-3">
+						<div class="text-center mt-4">
 							<button class="btn btn-primary mr-1" [disabled]="registering">Change Password</button>
 						</div>
 
-						<div *ngIf="failed" class="failed-form mt-5">
+						<div *ngIf="failed" class="failed-form mt-4">
 							Invalid verification code provided, please try again.
 						</div>
 					</form>
+				</div>
+			</div>
+			<div class="row mt-3">
+				<div class="col-6">
+					<a routerLinkActive="active" [routerLink]="['/login']" class="text-light"><small>Login</small></a>
 				</div>
 			</div>
 		</div>
