--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,19 +2,16 @@
   <div class="container">
     <div class="header-body text-center mb-7">
       <div class="row justify-content-center">
-        <div class="col-lg-5 col-md-6">
-          <h1 class="text-white">Welcome!</h1>
-          <p class="text-lead text-white">Use these awesome forms to login or create new account in your project for
-            free.</p>
+        <div class="col-lg-5 col-md-6" style="height: 70px;">
         </div>
       </div>
     </div>
   </div>
-  <div class="separator separator-bottom separator-skew zindex-100">
+  <!-- <div class="separator separator-bottom separator-skew zindex-100">
     <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
       <polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
     </svg>
-  </div>
+  </div> -->
 </div>
 <!-- Page content -->
 <div class="container mt--9 pb-5">
@@ -37,7 +34,11 @@
         </div> -->
 
         <div class="card-body px-lg-5 py-lg-5">
-          <div class="text-center text-muted mb-4">
+          <div class="text-center mb-1">
+            <img src="./assets/img/brand/logoipsum-dark.svg" class="mb-1" />
+            <hr class="my-3">
+          </div>
+          <div class="text-muted mb-4">
             <small>Sign in with credentials</small>
           </div>
 
@@ -71,18 +72,18 @@
             </div>
 
 
-            <div class="custom-control custom-control-alternative custom-checkbox">
+            <!-- <div class="custom-control custom-control-alternative custom-checkbox">
               <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
               <label class="custom-control-label" for=" customCheckLogin">
                 <span class="text-muted">Remember me</span>
               </label>
-            </div>
+            </div> -->
 
-            <div class="text-center mt-3">
+            <div class="text-center mt-4">
               <button class="btn btn-primary mr-1" [disabled]="signingIn">Sign In</button>
             </div>
 
-            <div *ngIf="failed" class="failed-form mt-5">
+            <div *ngIf="failed" class="failed-form mt-4">
               Incorrect username or password.
             </div>
           </form>
@@ -91,10 +92,12 @@
       </div>
       <div class="row mt-3">
         <div class="col-6">
-          <a routerLinkActive="active" [routerLink]="['/register']" class="text-light"><small>Create new account</small></a>
+          <a routerLinkActive="active" [routerLink]="['/register']" class="text-light"><small>Create new
+              account</small></a>
         </div>
         <div class="col-6 text-right">
-          <a routerLinkActive="active" [routerLink]="['/forgot-password']" class="text-light"><small>Forgot password?</small></a>
+          <a routerLinkActive="active" [routerLink]="['/forgot-password']" class="text-light"><small>Forgot
+              password?</small></a>
         </div>
       </div>
     </div>
