--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -2,19 +2,16 @@
 	<div class="container">
 		<div class="header-body text-center mb-7">
 			<div class="row justify-content-center">
-				<div class="col-lg-5 col-md-6">
-					<h1 class="text-white">Welcome!</h1>
-					<p class="text-lead text-white">Use these awesome forms to login or create new account in your
-						project for free.</p>
+				<div class="col-lg-5 col-md-6" style="height: 70px;">
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="separator separator-bottom separator-skew zindex-100">
-		<svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
-			xmlns="http://www.w3.org/2000/svg">
-			<polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
-		</svg>
+		<!-- <div class="separator separator-bottom separator-skew zindex-100">
+			<svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
+				xmlns="http://www.w3.org/2000/svg">
+				<polygon class="fill-default" points="2560 0 2560 100 0 100"></polygon>
+			</svg>
+		</div> -->
 	</div>
 </div>
 <!-- Page content -->
@@ -38,8 +35,12 @@
 					</div>
 				</div>
 				<div class="card-body px-lg-5 py-lg-5">
-					<div class="text-center text-muted mb-4">
-						<small>Sign up with credentials</small>
+					<div class="text-center mb-1">
+						<img src="./assets/img/brand/logoipsum-dark.svg" class="mb-1" />
+						<hr class="my-3">
+					</div>
+					<div class="text-muted mb-4">
+						<h2>Sign Up. <small style="font-size: 12.8px;">It’s quick and easy.</small></h2>
 					</div>
 
 					<form [formGroup]="registerForm" (ngSubmit)="onSubmit()" *ngIf="!isConfirm">
@@ -109,11 +110,11 @@
 							</div>
 						</div>
 
-						<div class="text-center mt-3">
+						<div class="text-center mt-4">
 							<button class="btn btn-primary mr-1" [disabled]="registering">Verify</button>
 						</div>
 
-						<div *ngIf="failed" class="failed-form mt-5">
+						<div *ngIf="failed" class="failed-form mt-4">
 							Invalid verification code provided, please try again.
 						</div>
 					</form>
@@ -121,7 +122,7 @@
 			</div>
 			<div class="row mt-3">
 				<div class="col-6">
-				  <a routerLinkActive="active" [routerLink]="['/login']" class="text-light"><small>Log In</small></a>
+					<a routerLinkActive="active" [routerLink]="['/login']" class="text-light"><small>Login</small></a>
 				</div>
 			</div>
 		</div>
