--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -6,6 +6,10 @@
         <button type="button" class="btn btn-primary my-4" (click)="callEndpoint();">Call Endpoint</button>
       </div>
 
+      <div>
+        <button type="button" class="btn btn-primary my-4" (click)="callUserEndpoint();">Get User</button>
+      </div>
+
       <!-- Card stats -->
       <div class="row">
         <div class="col-xl-3 col-lg-6">
